[gd_scene load_steps=13 format=3 uid="uid://d4mg7i4cyw3il"]

[ext_resource type="Texture2D" uid="uid://bs4cx7yep5fap" path="res://UI/SpriteSheet.png" id="1_o56gd"]
[ext_resource type="Script" path="res://UI/wave_finished_dialog/wave_finished_dialog.gd" id="1_slpd4"]
[ext_resource type="FontFile" uid="uid://cpsua7jawk5h0" path="res://assets/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf" id="3_maojm"]
[ext_resource type="Texture2D" uid="uid://baluwwbfn4sf7" path="res://UI/Buttons/long/button.png" id="4_00hk3"]
[ext_resource type="Texture2D" uid="uid://cs4m8p4hrxg7v" path="res://UI/Buttons/long/pressed_button.png" id="5_jjsec"]
[ext_resource type="Texture2D" uid="uid://ox6g8eumw3rb" path="res://UI/Buttons/long/hover_button.png" id="6_fxsb5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gl3a1"]
texture = ExtResource("1_o56gd")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(240, 32, 81, 80)

[sub_resource type="Theme" id="Theme_d5yae"]
Label/colors/font_color = Color(0.105882, 0.133333, 0.211765, 1)
Label/fonts/font = ExtResource("3_maojm")
PanelContainer/styles/panel = SubResource("StyleBoxTexture_gl3a1")

[sub_resource type="Animation" id="Animation_uof4r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oxy83"]
resource_name = "ease-in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_to77x"]
resource_name = "next_wave"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7y1x3"]
_data = {
"RESET": SubResource("Animation_uof4r"),
"ease-in": SubResource("Animation_oxy83"),
"next_wave": SubResource("Animation_to77x")
}

[node name="WaveFinishedDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -109.0
offset_right = 75.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 25)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_d5yae")
script = ExtResource("1_slpd4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = -8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Wave_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_maojm")
text = "aaaa"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="NextWaveButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_00hk3")
texture_pressed = ExtResource("5_jjsec")
texture_hover = ExtResource("6_fxsb5")

[node name="NextWaveLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/NextWaveButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.5
offset_top = -10.0
offset_right = 40.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToLobbyButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_00hk3")
texture_pressed = ExtResource("5_jjsec")
texture_hover = ExtResource("6_fxsb5")

[node name="LeaveLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/BackToLobbyButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = -10.0
offset_right = 38.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.65, 0.65)
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7y1x3")
}
autoplay = "ease-in"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextWaveButton" to="." method="_on_next_wave_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackToLobbyButton" to="." method="_on_back_to_lobby_button_pressed"]
